tests/ui/future/try_get_with_non_send_future.stderr
error: future cannot be sent between threads safely
  --> $DIR/try_get_with_non_send_future.rs:15:10
   |
15 |         .get_or_try_insert_with(0, async move {
   |          ^^^^^^^^^^^^^^^^^^^^^^ future created by async block is not `Send`
   |
   = help: within `impl Future`, the trait `Send` is not implemented for `Rc<String>`
note: captured value is not `Send`
  --> $DIR/try_get_with_non_send_future.rs:19:16
   |
19 |             Ok(data1.to_string()) as Result<_, Infallible>
   |                ^^^^^ has type `Rc<String>` which is not `Send`
